[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sharework_python"             # distribution name (fine to keep)
version = "0.1.0"
description = "Sharework cell loader utilities"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
authors = [{ name = "JRL-CARI-CNR-UNIBS" }]
keywords = ["robotics", "urdf", "sharework"]
# dependencies = ["numpy", "pyyaml"]  # if needed

[project.urls]
Homepage = "https://github.com/JRL-CARI-CNR-UNIBS/sharework_python"
Source   = "https://github.com/JRL-CARI-CNR-UNIBS/sharework_python"
Issues   = "https://github.com/JRL-CARI-CNR-UNIBS/sharework_python/issues"

[tool.setuptools]
include-package-data = true

# Find and package the 'sharework' package
[tool.setuptools.packages.find]
where = ["."]
include = ["sharework"]

# Include non-Python data files in the wheel
[tool.setuptools.package-data]
sharework = ["*.urdf", "assets/**/*"]

